fix. notes getting overlapped with medication tags in tablet screens

--- a/src/features/DisplayControls/DrugChart/styles/DrugListCell.scss
+++ b/src/features/DisplayControls/DrugChart/styles/DrugListCell.scss
@@ -15,7 +15,7 @@
   .order-details {
     display: flex;
     flex-direction: column;
-    max-width: calc(100% - 5rem);
+    max-width: calc(100% - 6rem);
     gap: 2px;
   }
 
